# wakafetch

./: wakafetch.cabal
app/: Main.hs
src/: Lib.hs
