name:                wakafetch
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/minimal/wakafetch#readme
license:             BSD3
license-file:        LICENSE
author:              Chris McDevitt
maintainer:          christophermcdevitt@gmail.com
copyright:           Chris McDevitt 2015
category:            value
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , text
                     , turtle
                     , wreq
                     , lens
                     , lens-aeson
                     , aeson
                     , scientific
                     , time
                     , bytestring
                     , formatting
                     , http-client
  default-language:    Haskell2010

executable wakafetch-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , wakafetch
  default-language:    Haskell2010

test-suite wakafetch-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , wakafetch
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/minimal/wakafetch
